--- a/content/post/1.md
+++ b/content/post/1.md
@@ -7,19 +7,19 @@ draft = false
 
 What every computer science major should know!
 
--   Portfolio versus Resume
--   Programming languages
--   Discrete mathematics
--   Data structures and algorithms
--   Theory
--   Architecture
--   Operating systems
--   Networking
--   Security
--   User experience design (UX)
--   Software engineering
--   Artificial intelligence
--   Databases
+-   Portfolio versus Resume,
+-   Programming languages,
+-   Discrete mathematics,
+-   Data structures and algorithms,
+-   Theory,
+-   Architecture,
+-   Operating systems,
+-   Networking,
+-   Security,
+-   User experience design (UX),
+-   Software engineering,
+-   Artificial intelligence,
+-   Databases,
 
 Are you curious? read the original article.
 
