--- a/blogs.org
+++ b/blogs.org
@@ -22,7 +22,7 @@
 
    Need help?
 
-   Click on [[https://forms.gle/gAUDPNdFC5PvVsY17][MESSAGE]] to register the request.
+   Click on [[https://forms.gle/gAUDPNdFC5PvVsY17][MESSAGE]] to register your request.
    
 ** About
    :PROPERTIES: 
