--- a/blogs.org
+++ b/blogs.org
@@ -1,3 +1,5 @@
+#+TITLE: Static Website
+#+AUTHOR: G. Srinivasachar
 #+STARTUP: overview
 #+hugo_base_dir: .
 #+options: author:nil
@@ -52,15 +54,15 @@
    Atria I.T \\
    Bengaluru 560024
 
-* Computer Science
+* Computer Science                             :@computer_science:essentials:
   :PROPERTIES:
   :EXPORT_HUGO_SECTION: posts
   :END:
 
-** What every computer science major should know! :@computer_science:essentials:
+** What every computer science major should know!
    :PROPERTIES:
-   :EXPORT_DATE: 2017-12-19
    :EXPORT_FILE_NAME: 1
+   :EXPORT_DATE: {{{time(%Y-%m-%d)}}}
    :END:
 
    What every computer science major should know!
@@ -86,6 +88,7 @@
 ** Test
    :PROPERTIES:
    :EXPORT_FILE_NAME: 2
+   :EXPORT_DATE: {{{time(%Y-%m-%d)}}}
    :END:
 
    Test
@@ -125,18 +128,52 @@
 
      [[https://forms.gle/gZyYkqsuQUHRKfXF9][Contact Form]]
 
-* Physics
+** Digital signature
+   :PROPERTIES:
+   :EXPORT_FILE_NAME: 3
+   :END:
+
+   #+ATTR_HTML: :width 500px
+   #+CAPTION: Digital Signature
+   [[file:./static/img/3/digital-signature.png]]
+
+   Proves that the document is not tampered and issued by intended
+   person.
+
+** Firewall
+   :PROPERTIES:
+   :EXPORT_FILE_NAME: 4
+   :END:
+
+   #+CAPTION: Firewall
+   [[file:./static/img/4/firewall.png]]
+
+   + Filter IP packets to a destination or from a source
+** RSA
+   :PROPERTIES:
+   :EXPORT_FILE_NAME: 5
+   :EXPORT_HUGO_CUSTOM_FRONT_MATTER: :mathjax true
+   :END:
+
+   #+CAPTION: RSA
+   [[file:./static/img/5/RSA.png]]
+   
+   1. $C = P^e \, mod \, n$
+   2. $P = C^d \, mod \, n$
+
+
+* Physics                                                          :@physics:
   :PROPERTIES:
   :EXPORT_HUGO_SECTION: phy
   :END:
-** Phy                                                              :@Physics:
+** Phy
    :PROPERTIES:
    :EXPORT_FILE_NAME: 1
    :END:
 
    PHYSICS
 
-* Chemistry
+* Chemistry                                                      :@chemistry:
   :PROPERTIES:
   :EXPORT_HUGO_SECTION: chem
   :END:
@@ -147,7 +184,7 @@
 
    CHEMISTRY
 
-* Mathematics
+* Mathematics                                                        :@maths:
   :PROPERTIES:
   :EXPORT_HUGO_SECTION: math
   :END:
